--- a/gb/19/8/30/n11488228.md
+++ b/gb/19/8/30/n11488228.md
@@ -1,46 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ïã¸Û¾ÖÊÆ½ôÕÅ ÎâîÈÛÆ£º±±¾©Ó¦»ØÓ¦ÈËÃñÆÚ´ý</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>é¦™æ¸¯å±€åŠ¿ç´§å¼  å´é’Šç‡®ï¼šåŒ—äº¬åº”å›žåº”äººæ°‘æœŸå¾…</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ30ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀîâùÐÀÌ¨ÍåÌ¨±±±¨µ¼£©¶ÔÓÚ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">Ïã¸Û</a>ÃñÔËÁìÐä<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%BB%84%E4%B9%8B%E9%94%8B.md">»ÆÖ®·æ</a>µÈÈËÔâ´þ²¶£¬ÖÐ»ªÃñ¹úÌ¨ÍåÍâ½»²¿³¤<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%90%B4%E9%92%8A%E7%87%AE.md">ÎâîÈÛÆ</a>30ÈÕ±íÊ¾£¬ÎÒ·½³ÖÐø¹Ø×¢<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">Ïã¸Û</a>ÇéÊÆ·¢Õ¹£¬ºôÓõ±±¾©Óë¸Û¸®»ØÓ¦ÈËÃñÆÚ´ý£¬²»Òª×ö³ö´íÎóÅÐ¶Ï£¬Ôì³ÉÀúÊ·µÄÒÅº¶¡£</p>
-<p>Ïã¸ÛÖÚÖ¾ÃØÊé³¤<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%BB%84%E4%B9%8B%E9%94%8B.md">»ÆÖ®·æ</a>ºÍ³ÉÔ±ÖÜÍ¥Éæ6ÔÂ21ÈÕ½ðÖÓ¼°Íå×Ð¾¯²ì×Ü²¿ÍâÊ¾Íþ£¬Ôâ¸Û¾¯¾Ð²¶£»ÏÂÎç·¨Ôº¸÷ÒÔÒ»ÍòÔª¸Û±ÒÍ¬ÒâÁ½ÈË½»±££¬µ«±ØÐëÖ´ÐÐÃ¿ÈÕÍí¼ä11µãµ½ÒîÈÕÁè³¿7µãÏü½û¡£»ÆÖ®·æÀë¿ª·¨ÔºÊ±±íÊ¾£¬¾Ð²¶Ö»»áÈÃËûÃÇÁ¢³¡¸ü¼Ó¼á¶¨£¬¼á³Ö·´¶ÔÐÞ¶©ÌÓ·¸ÌõÀýÔË¶¯µÄ5´óËßÇó¡£</p>
-<p>¶ÔÓÚÏã¸ÛÃñÔËÈËÊ¿Ôâ×¥²¶£¬Ì¨Íâ½»²¿³¤<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%90%B4%E9%92%8A%E7%87%AE.md">ÎâîÈÛÆ</a>30½ÓÊÜÃ½ÌåÑ¯ÎÊ±íÊ¾£¬Ì¨ÍåÕþ¸®Ïàµ±¹ØÐÄÏã¸ÛÈËÊ¿Ôâ´þ²¶Óë±»±©Á¦¶Ô´ýµÄÇé¿ö£¬ËûÖØÉêÍâ½»²¿¶ÔÏã¸ÛÒéÌâµÄÈýµãÖ÷ÕÅ¡£</p>
-<p>ÎâîÈÛÆËµ£¬Ì¨ÍåÕþ¸®Ö§³ÖÏã¸ÛÈËÃñ×·ÇóÃñÖ÷×ÔÓÉµÄ¾öÐÄ£¬µ«ÎÒ·½¾ö²»»áÉæÈëÏã¸ÛÄÚ²¿ÊÂÎñ£»ºôÓõ¸Û¸®µ±¾Ö±ØÐë»ØÓ¦ÈËÃñµÄÆÚ´ý£¬ÈÃÏã¸ÛÔçÈÕ»Ö¸´ÈÕ³£ÔË×÷¡£</p>
-<p>ÎâîÈÛÆÖØÉê£¬±±¾©µ±¾ÖÓë¸Û¸®²»Òª°ÑÇéÊÆ¶ñ»¯µÄÔðÈÎÍÆÐ¶¸ø²»´æÔÚµÄÍâÁ¦½éÈë£¬²»Òª¾Ü¾øÓëÈËÃñ¶Ô»°£¬¸ü²»Òª×ö³ö´íÎóÅÐ¶Ï£¬Ôì³ÉÀúÊ·µÄÒÅº¶¡£</p>
-<p>ÔðÈÎ±à¼­£ºÖ£èë</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ30æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æŽæ€¡æ¬£å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰å¯¹äºŽ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">é¦™æ¸¯</a>æ°‘è¿é¢†è¢–<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%BB%84%E4%B9%8B%E9%94%8B.md#1">é»„ä¹‹é”‹</a>ç­‰äººé­é€®æ•ï¼Œä¸­åŽæ°‘å›½å°æ¹¾å¤–äº¤éƒ¨é•¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E9%92%8A%E7%87%AE.md#1">å´é’Šç‡®</a>30æ—¥è¡¨ç¤ºï¼Œæˆ‘æ–¹æŒç»­å…³æ³¨<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">é¦™æ¸¯</a>æƒ…åŠ¿å‘å±•ï¼Œå‘¼ååŒ—äº¬ä¸Žæ¸¯åºœå›žåº”äººæ°‘æœŸå¾…ï¼Œä¸è¦åšå‡ºé”™è¯¯åˆ¤æ–­ï¼Œé€ æˆåŽ†å²çš„é—æ†¾ã€‚</p>
+<p>é¦™æ¸¯ä¼—å¿—ç§˜ä¹¦é•¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%BB%84%E4%B9%8B%E9%94%8B.md#1">é»„ä¹‹é”‹</a>å’Œæˆå‘˜å‘¨åº­æ¶‰6æœˆ21æ—¥é‡‘é’ŸåŠæ¹¾ä»”è­¦å¯Ÿæ€»éƒ¨å¤–ç¤ºå¨ï¼Œé­æ¸¯è­¦æ‹˜æ•ï¼›ä¸‹åˆæ³•é™¢å„ä»¥ä¸€ä¸‡å…ƒæ¸¯å¸åŒæ„ä¸¤äººäº¤ä¿ï¼Œä½†å¿…é¡»æ‰§è¡Œæ¯æ—¥æ™šé—´11ç‚¹åˆ°ç¿Œæ—¥å‡Œæ™¨7ç‚¹å®µç¦ã€‚é»„ä¹‹é”‹ç¦»å¼€æ³•é™¢æ—¶è¡¨ç¤ºï¼Œæ‹˜æ•åªä¼šè®©ä»–ä»¬ç«‹åœºæ›´åŠ åšå®šï¼ŒåšæŒåå¯¹ä¿®è®¢é€ƒçŠ¯æ¡ä¾‹è¿åŠ¨çš„5å¤§è¯‰æ±‚ã€‚</p>
+<p>å¯¹äºŽé¦™æ¸¯æ°‘è¿äººå£«é­æŠ“æ•ï¼Œå°å¤–äº¤éƒ¨é•¿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%90%B4%E9%92%8A%E7%87%AE.md#1">å´é’Šç‡®</a>30æŽ¥å—åª’ä½“è¯¢é—®è¡¨ç¤ºï¼Œå°æ¹¾æ”¿åºœç›¸å½“å…³å¿ƒé¦™æ¸¯äººå£«é­é€®æ•ä¸Žè¢«æš´åŠ›å¯¹å¾…çš„æƒ…å†µï¼Œä»–é‡ç”³å¤–äº¤éƒ¨å¯¹é¦™æ¸¯è®®é¢˜çš„ä¸‰ç‚¹ä¸»å¼ ã€‚</p>
+<p>å´é’Šç‡®è¯´ï¼Œå°æ¹¾æ”¿åºœæ”¯æŒé¦™æ¸¯äººæ°‘è¿½æ±‚æ°‘ä¸»è‡ªç”±çš„å†³å¿ƒï¼Œä½†æˆ‘æ–¹å†³ä¸ä¼šæ¶‰å…¥é¦™æ¸¯å†…éƒ¨äº‹åŠ¡ï¼›å‘¼åæ¸¯åºœå½“å±€å¿…é¡»å›žåº”äººæ°‘çš„æœŸå¾…ï¼Œè®©é¦™æ¸¯æ—©æ—¥æ¢å¤æ—¥å¸¸è¿ä½œã€‚</p>
+<p>å´é’Šç‡®é‡ç”³ï¼ŒåŒ—äº¬å½“å±€ä¸Žæ¸¯åºœä¸è¦æŠŠæƒ…åŠ¿æ¶åŒ–çš„è´£ä»»æŽ¨å¸ç»™ä¸å­˜åœ¨çš„å¤–åŠ›ä»‹å…¥ï¼Œä¸è¦æ‹’ç»ä¸Žäººæ°‘å¯¹è¯ï¼Œæ›´ä¸è¦åšå‡ºé”™è¯¯åˆ¤æ–­ï¼Œé€ æˆåŽ†å²çš„é—æ†¾ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šéƒ‘æ¡¦</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/30/n11488228.htm">Ïã¸Û¾ÖÊÆ½ôÕÅ ÎâîÈÛÆ£º±±¾©Ó¦»ØÓ¦ÈËÃñÆÚ´ý</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/1/n11422856.htm">±±¾©½ûÂ½¿ÍÀ´Ì¨ ÎâîÈÛÆ£ºÊÇÔÚÅÂÊ²Ã´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/14/n11384171.htm">ÖÐ¹²×¤ÃÀ´óÊ¹·¢ÎÄÇºÌ¨  ÎâîÈÛÆ£ºÏÈÈÃÖÐ¹úÈËÓÃÍÆÌØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/3/n11361847.htm">ÎâîÈÛÆ£ºÌ¨ÍåÊÇÎÈÈôÅÍÊ¯ÃñÖ÷»ï°é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/2/n11359716.htm">Ö§³Ö·´ËÍÖÐ Ì¨Íâ³¤ÎâîÈÛÆÓõÈ«ÇòÍÅ½á</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/29/n11485707.htm">¾ü¶ÓÈë¸Û ¸ß²ã¼¤Õ½ ÖÐ¹²¸÷ÅÉ»¥Éè·À</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/29/n11486060.htm">´«¹¤ÐÐÉÏº£·ÖÐÐÐÐ³¤Ç±¹æÔò32ÃûÅ®ÏÂÊô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/29/n11485866.htm">¾ü¶ÓÈë¸Û Èý¹ÉÁ¦Á¿Î§ÈÆÏã¸Û·´ËÍÖÐ¼¤Õ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/29/n11486404.htm">ÖÜÏþ»Ô£ºÎªÇì¡°Ê®Ò»¡±±±¾©¶ÔÏã¸Û¿ªÊ¼´ó¶¯×÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11381883.htm">¡¾ÏÍºó´«¡¿ÈÃÇ¬Â¡×·Ë¼ÁËÎåÊ®Ò»ÄêµÄ´óÇåÏÍºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458280.htm">Áõ²®ÎÂÔ¤ÑÔ ¼Ö¼ÒÊÀÊÀÅå½ð´ø Óë¹úÍ¬ÐÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/10/10/n4546752.htm">ÄÜÔ¤ÖªÎ´À´µÄÌÆ´ú¸ßÈËÀî´¾·ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/16/n11262822.htm">¡¾Õ÷ÎÄ¡¿À¼Òô£º´«Í³Éç»áÖÐÆÞ×ÓµÄÕæÊµµØÎ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11484221.htm">ÄÐÅ®²»·Ö£¿´óÂ½Ìï¾¶Å®×Ó½ÓÁ¦Èü±¬¡°ÐÔ±ðÃÅ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11484301.htm">Ï°½üÆ½±»ÈÈÅõÓÖÔâÀä¼ý ÖÐ¹²¸ß²ãÈ¨¶·¹îÒì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11483947.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°½üÆ½Ôâ³¸Öâ£¿µ³Ã½ÓëÁõº×³ª·´µ÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11483691.htm">¡¾ÐÂÎÅ¿´µã¡¿²¡¼±ÂÒÍ¶Ò½£¿»ªÎªÕÒ¶íAuroraÌæ´ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/29/n11484594.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÖÇ»ÛµÆÖùÉæ¼à¿Ø£¿¸ÛÈËÓÇÖÐ¹²ÌìÍø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/27/n11481364.htm">¡¾ÐÂÎÅ¿´µã¡¿Áõº×ÇóºÍ£¿G7·å»áÖÐ¹²¿ÕÇ°¹ÂÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11484254.htm">·´ËÍÖÐÊ«¸è´ßÈËÀáÏÂ ÁºÜÆÉº£ºÍûÈ«ÈËÀà¾õÐÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/27/n11481439.htm">Å®¶ù¿¿ÌýÑ§Ð¡ÌáÇÙ ÍõÁ¦ºêÆÞÀîö¦ÀÙÖ±ºô±»ÏÅÉµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11483749.htm">ÓëÈýÎ»µçÓ°´óÀÐ¾Û»á ·¶±ù±ùÒ»ÉíËé»¨È¹ÁÁÏà</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/27/n11481624.htm">·þÎñÔ±ÓëËûºÏÕÕºóÏÕ±»¿ª³ý Àî¼Ñº½£ºÐÄÀïËá³þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/28/n11483972.htm">Á½°ÙÔªÒ»³¡ÁèÈèÏ·ÇÀ×ÅÅÄ ºáµêÈºÑÝ×ªÕ½¶¶Òô</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/1/n11422856.md#1">åŒ—äº¬ç¦é™†å®¢æ¥å° å´é’Šç‡®ï¼šæ˜¯åœ¨æ€•ä»€ä¹ˆï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/14/n11384171.md#1">ä¸­å…±é©»ç¾Žå¤§ä½¿å‘æ–‡å‘›å°  å´é’Šç‡®ï¼šå…ˆè®©ä¸­å›½äººç”¨æŽ¨ç‰¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/3/n11361847.md#1">å´é’Šç‡®ï¼šå°æ¹¾æ˜¯ç¨³è‹¥ç£çŸ³æ°‘ä¸»ä¼™ä¼´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/2/n11359716.md#1">æ”¯æŒåé€ä¸­ å°å¤–é•¿å´é’Šç‡®åå…¨çƒå›¢ç»“</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/30/n11488228.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">æ¾³åŒ»å­¦åä¼šè¥¿æ¾³ä¸»å¸­ï¼šå­¦æ ¡å°†å…³é—­</a></li>
+<li><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/20/2/20/n11884306.md#1">é€€å‡ºæ— ç¥žè®ºç»„ç»‡ åšä¸ªç¥žä½›ä¿ä½‘çš„äºº</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">ä¸€ä½ä¸­å›½ä¹¡ä¸‹è€å¸ˆ èŽ·ç¾Žå›½å‚ä¼—ä¸¤é™¢å…³æ³¨</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">â€œå›žå›½é¿ç–«â€å’Œâ€œä¸­å›½å¼æ’¤ä¾¨â€çš„çœŸç›¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">ã€æœ€æ–°ç–«æƒ…3.16ã€‘æ—§é‡‘å±±åœ°åŒº700ä¸‡äººå±…å®¶é˜²ç–«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">è—è™«ç¾¤æ”»å®˜åºœå¼‚è±¡ ä¸ºä½•åƒå°½ç”»åƒäººå¤´ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">è¢«æ‰’çš®çš„æ³•å®˜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">æœ«ä»£å›½å›çš„é£ŽèŒƒ é¡ºä»Žå¤©æ„çš„å…ƒæƒ å®—</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">å›¾è¯è—è™«å¤§å†›è‚†è™ ä¸­å…±æ€¥å®šé¢„æ¡ˆæéš¾åº”å¯¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç—…æ¯’æ¥è‡ªå“ªé‡Œï¼Ÿå·æ™®ï¼šä¸­ç¾Žéƒ½çŸ¥é“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">ã€çŽ°åœºè§†é¢‘ã€‘ä¸œèŽžè™Žé—¨é•‡çŽ°å¤§é‡é˜²æš´è­¦å¯Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">ç–«æƒ…å½±å“æ— æ³•å¼€ä¸š å±±ä¸œå•†æˆ·åå‡ç§Ÿé­æš´åŠ›æŠ“æ•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">æ­¦æ±‰äººæ–¥å®˜å‘˜ï¼šç»™ä½ æ”¹æ­£æœºä¼š è°ç»™æˆ‘æ´»å‘½æœºä¼š</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">ã€ä¸€çº¿é‡‡è®¿è§†é¢‘ç‰ˆã€‘æ­¦æ±‰å¸‚æ°‘ï¼šé¦–å…ˆè¦æ´»ä¸‹æ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">å¤å·¨åŸºå®£å¸ƒå½“çˆ¸ æ™’å®å®åˆç…§åˆ†äº«å–œæ‚¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">åˆä¸€å¥½èŽ±åžæ˜Žæ˜Ÿç¡®è¯Š 007é‚¦å¥³éƒŽéš”ç¦»åœ¨å®¶</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/30/n11488228.htm">é¦™æ¸¯å±€åŠ¿ç´§å¼  å´é’Šç‡®ï¼šåŒ—äº¬åº”å›žåº”äººæ°‘æœŸå¾…</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/8/30/n11488228.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
